--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,10 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 vendor/bundle
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
